--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpileOnly ./src/App.ts",
-    "prod": "tsc && node ./build/app.js"
+    "dev": "nodemon",
+    "prod": "tsc && node ./dist"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/node": "^11.13.0",
+    "nodemon": "^1.18.11",
     "ts-node": "^8.0.3",
-    "ts-node-dev": "^1.0.0-pre.32",
     "tslint": "^5.15.0",
     "typescript": "^3.4.2"
   }
