--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.18.11",
     "ts-node": "^8.0.3",
     "tslint": "^5.15.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.2"
   }
 }
