--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mysql": "^2.16.0",
+    "pluralize": "^7.0.0",
     "typeorm": "^0.2.16"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.0",
+    "@types/pluralize": "0.0.29",
     "nodemon": "^1.18.11",
     "ts-node": "^8.0.3",
     "tslint": "^5.15.0",
