--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/multer": "^1.3.7",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "pluralize": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
     "typeorm": "^0.2.16"
   },
