--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^5.0.8",
     "@types/body-parser": "^1.17.0",
     "@types/multer": "^1.3.7",
     "body-parser": "^1.18.3",
