--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/multer": "^1.3.7",
     "body-parser": "^1.18.3",
+    "class-validator": "^0.9.1",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "multer": "^1.4.1",
