--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "class-validator": "^0.9.1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.0",
     "@types/pluralize": "0.0.29",
