--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "jest": "jest",
     "tsc": "tsc",
     "dev": "nodemon",
     "build": "tsc",
@@ -32,14 +33,22 @@
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/jsonwebtoken": "^8.3.2",
+    "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.0",
     "@types/pluralize": "0.0.29",
     "@types/qs": "^6.5.3",
+    "jest": "^24.7.1",
     "nodemon": "^1.18.11",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.0.3",
     "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.2"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testRegex": "tests/.+\\.spec\\.ts$",
+    "verbose": true
   }
 }
