인증 관련 로직 수정
- token 길이 200자로 증가
- auth 응답에서 password 제거
- headers 에서 토큰 가져오는 파라미터 Authrorization => authorization 으로 변경

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = false
 TYPEORM_ENTITIES = src/models/*.ts,dist/src/models/*.js
+JWT_SECRET = ''
