--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "class-validator": "^0.9.1",
     "express": "^4.16.4",
+    "jsdom": "^15.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
     "multer": "^1.4.1",
@@ -28,16 +29,19 @@
     "qs": "^6.7.0",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.7.7",
+    "showdown": "^1.9.0",
     "typeorm": "^0.2.16"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
-    "@types/jsonwebtoken": "^8.3.2",
     "@types/jest": "^24.0.11",
+    "@types/jsdom": "^12.2.3",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.0",
     "@types/pluralize": "0.0.29",
     "@types/qs": "^6.5.3",
+    "@types/showdown": "^1.9.3",
     "jest": "^24.7.1",
     "nodemon": "^1.18.11",
     "ts-jest": "^24.0.2",
